grammar.js
    module: $ => repeat($._stmt),

    _stmt: $ => choice(
      $._simple_stmts,
      $._compound_stmt,
    ),

    // Simple statements

    schema_expr: $ => seq(
      field('operand_name', $.identifier),
      optional(seq(
        '(',
        optional($.argument_list),
        ')'
      )),
      $.config_expr,
    ),

    block: $ => seq(
      repeat($._stmt),
      $._dedent,
    ),

    dotted_name: $ => prec.left(1, sep1($.identifier, choice('?.', '.',))),

    // Patterns

    type: $ => choice(
      $.schema_type,
      $.union_type,
      $.function_type,
      $.basic_type,
      $.list_type,
      $.dict_type,
      $.literal_type,
    ),
    schema_type: $ => $.dotted_name,
    union_type: $ => prec.left(seq($.type, repeat1(prec.left(seq('|', $.type))))),
    basic_type: _ => choice('str', 'int', 'float', 'bool', 'any'),
    list_type: $ => prec.left(seq('[', optional($.type), ']')),
    dict_type: $ => prec.left(seq('{', optional($.type), ':', optional($.type), '}')),
    literal_type: $ => choice($.string, $.float, $.integer, $.true, $.false),

    // Literals

    string: $ => seq(
      $.string_start,
     repeat(choice($.interpolation, $.string_content)),
      $.string_end,
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    _not_escape_sequence: _ => token.immediate('\\'),

    integer: $ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        field('multiplier', optional(choice(NUMBER_SUFFIX.n, NUMBER_SUFFIX.u, NUMBER_SUFFIX.m, NUMBER_SUFFIX.k, NUMBER_SUFFIX.K, NUMBER_SUFFIX.M, NUMBER_SUFFIX.G, NUMBER_SUFFIX.T, NUMBER_SUFFIX.P, NUMBER_SUFFIX.Ki, NUMBER_SUFFIX.Mi, NUMBER_SUFFIX.Gi, NUMBER_SUFFIX.Ti, NUMBER_SUFFIX.Pi))),
      ),
    )),

    float: _ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(seq(
        choice(
          seq(digits, '.', optional(digits), optional(exponent)),
          seq(optional(digits), '.', digits, optional(exponent)),
          seq(digits, exponent),
        ),
      ));
    },

    identifier: _ => /[_$a-zA-Z][_$\p{XID_Continue}]*/,

    true: _ => NAME_CONSTANTS.TRUE,
    false: _ => NAME_CONSTANTS.FALSE,
    none: _ => NAME_CONSTANTS.NONE,
    undefined: _ => NAME_CONSTANTS.UNDEFINED,
