test/corpus/assert.txt
================================================================================
assert statements
================================================================================

assert x > 1

--------------------------------------------------------------------------------

(module
    (assert_statement
    (comparison_operator
        (identifier)
        (integer))))

================================================================================
assert statements with error message
================================================================================

assert a == b, "SOS"

--------------------------------------------------------------------------------

(module
      (assert_statement
        (comparison_operator
          (identifier)
          (identifier))
        (string
          (string_start)
          (string_content)
          (string_end))))
