test/corpus/literal.txt
================================================================================
string
================================================================================

""
''
""""""
"""sdadada"""

--------------------------------------------------------------------------------

(module
  (string
    (string_start)
    (string_end))
  (string
    (string_start)
    (string_end))
  (string
    (string_start)
    (string_end))
  (string
    (string_start)
    (string_content)
    (string_end)))

================================================================================
raw string
================================================================================

r"Hi\nHello"

--------------------------------------------------------------------------------

(module
  (string
    (string_start)
    (string_content)
    (string_end)))

================================================================================
Documented String
================================================================================

schema Person:
    """
    Person schema doc string
    """

    name: str = "Alice"

--------------------------------------------------------------------------------

(module
  (schema_statement
    (identifier)
    (block
      (string
        (string_start)
        (string_content)
        (string_end))
      (assignment
        (dotted_name
          (identifier))
        (type
          (basic_type))
        (string
          (string_start)
          (string_content)
          (string_end))))))

================================================================================
number
================================================================================

1Ki
1.1
+1.1
-10

--------------------------------------------------------------------------------

(module
  (integer)
  (float)
  (unary_operator
    (float))
  (unary_operator
    (integer)))

================================================================================
name constant
================================================================================

True
False
None
Undefined

--------------------------------------------------------------------------------

(module
  (true)
  (false)
  (none)
  (undefined))

================================================================================
list
================================================================================

[1, 2, 3]

--------------------------------------------------------------------------------

(module
  (list
    (integer)
    (integer)
    (integer)))

================================================================================
Dictionary
================================================================================

{"one" = 1}

--------------------------------------------------------------------------------

(module
  (dictionary
    (pair
      (string
        (string_start)
        (string_content)
        (string_end))
      (integer))))
